manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: frontend-deployment 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: awappcr.azurecr.io/frontendImage
          ports:
          - containerPort: 3000


apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: awappcr.azurecr.io/backendImage
          ports:
          - containerPort: 3001
