manifests/deployment_test.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: frontenddeployment 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontendcontainer
          image: hawcr.azurecr.io/frontned
          ports:
          - containerPort: 80
          imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backenddeployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backendcontainer
          image: hawcr.azurecr.io/backned
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
